--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.3",
     "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.2",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.3",
     "socket.io-client": "^4.7.5"
-  
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
