--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sagitta",
   "version": "1.0.0",
-  "description": "",
+  "description": "Sagitta es una aplicacion web para center lan, donde se brindara informacion y recursos para los usuarios y clientes gaming",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -13,15 +13,23 @@
   "author": "Jair Becerril",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "ejs-mate": "^4.0.0",
+    "errorhandler": "^1.5.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
+    "md5": "^2.3.0",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
-    "react-google-maps": "^9.4.5",
+    "multer": "^1.4.5-lts.1",
+    "react-leaflet": "^2.8.0",
+    "react-player": "^2.16.0",
     "socket.io": "^4.7.5",
     "zod": "^3.22.4"
   },
